# HFT_Market_Engine

./: .gitignore  CMakeLists.txt
include/: LockFreeQueue.hpp  LockQueue.hpp  MarketStats.hpp  TradeSignal.hpp
src/: main.cpp
